[workspace]
members = [".", "lin-state-macros"]

[workspace.package]
version = "0.0.1"
license = "MIT"
edition = "2021"
repository = "https://github.com/viddrobnic/lin-state"
homepage = "https://github.com/viddrobnic/lin-state"
authors = ["Vid Drobnič <vid@zerodays.dev>"]

[package]
name = "lin-state"
readme = "README.md"
description = "Writing state machine in a linear way. This library is part of a larger project, available at the homepage of the library."
version.workspace = true
license.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true

[features]
default = ["macros"]
macros = ["dep:lin-state-macros"]

[dependencies]
lin-state-macros = { path = "lin-state-macros", optional = true }
