[package]
name = "lin-state-macros"
description = "Macro support for lin-state. Not intended to be used directly."
version.workspace = true
license.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
syn = "2.0"
quote = "1.0"
